# levensteinDistanceSorter

./: CMakeLists.txt  LICENSE  README.md  check_opt.py  gen_file.py  options.txt  strings.gen
src/: LevenshteinCalculator.cpp  LevenshteinCalculator.h  LevenshteinSorter.cpp  LevenshteinSorter.h  main.cpp
test/: distance.cpp
